Fix error about comment cannot use wrap

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -36,7 +36,6 @@
 .comment-create {
   form {box-shadow: 0 0 1px black;}
   textarea {
-    height: 18vh;
     border-radius: 0px; 
   }
   input[type="submit"], button#cancelButton {
@@ -103,7 +102,8 @@
     a:last-child {color: #000000A8;}
   }
   .comment-content {
-    text-align: initial;
+    text-align: left;
+    white-space: pre-wrap;
     overflow: auto;
   }
 }
